# DoACS

./: .env.example  README.md  docker-compose.yaml
backend/: Dockerfile  Dockerfile-ipfs-node  app.py  ipfs-service.yaml  settings.py
backend/backend/: app.py  settings.py
backend/backend/ipfs_app/: Dockerfile  pyproject.toml
backend/ipfs/: access_controller.py  cryptographer.py  ipns_router.py  router.py  service.py
frontend/: .env.example  Readme.md  character-service.yaml  package-lock.json  package.json
frontend/src/assets/styles/UI/: _btn.scss
frontend/src/assets/styles/components/: _file-control.scss
frontend/src/components/UI/: Sketch.vue
frontend/src/crypto/EVM/: SmartContract.js  index.js
frontend/src/crypto/EVM/rarible/: Connector.js  index.js
frontend/src/crypto/helpers/: index.js
frontend/src/crypto/helpers/DecentralizedStorage/: FileCoinStorage.js  index.js
frontend/src/crypto/helpers/Networks/: index.js
frontend/src/router/: index.js
frontend/src/store/: main.js
frontend/src/utils/: API.js  string.js
frontend/src/views/: LoginPage.vue  StoragePage.vue
